# gowin2vcd

./: .gitignore  CHANGELOG.md  LICENSE  README.md  output.vcd  pyproject.toml
.github/workflows/: python.yml
corpus/: README.md
corpus/aliases/: basic_aliases.csv
corpus/binary/: basic_bin.csv
corpus/edge/: empty_signals.csv
corpus/hex/: basic_hex.csv
corpus/real/: aurora_debug_core0.csv
docs/: architecture.md  file_format.md
examples/: sample.csv
src/gowin2vcd/: __init__.py  __main__.py  cli.py  exceptions.py  fst.py  gtkw.py  hierarchy.py  json.py  model.py  parser.py  radix.py  scanner.py  util.py  vcd.py  vcd_reader.py  writers.py
tests/: test_cross_validate.py  test_golden.py  test_gtkw.py  test_json.py  test_metadata.py  test_parser.py  test_signals.py  test_vcd.py
tests/golden/: capture1.csv  capture1.vcd
