[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gowin2vcd"
version = "0.1.0"
description = "Professional Gowin GAO CSV to VCD converter"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Name" }
]

[project.scripts]
gowin2vcd = "gowin2vcd.cli:main"