[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gowin2vcd"
version = "0.9.0"
description = "Convert Gowin GAO CSV captures to VCD waveform format."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Dan Shirley" }
]
license = { file = "LICENSE" }
keywords = [
    "gowin",
    "logic-analyzer",
    "vcd",
    "waveform",
    "csv",
    "fpga",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/TSltd/gowin2vcd"
Repository = "https://github.com/TSltd/gowin2vcd"
Issues = "https://github.com/TSltd/gowin2vcd/issues"
Documentation = "https://github.com/TSltd/gowin2vcd/tree/main/docs"

[project.scripts]
gowin2vcd = "gowin2vcd.cli:main"
